
Node Versions:
  * Moloch >= 2.4.0 requires NodeJS 12.x
  * Moloch >= 2.0.0 requires NodeJS 10.x
  * Moloch >= 1.6.0 requires NodeJS 8.x, 8.12 or later
  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading

2.7.0 2020/11/xx
  - NOTICE - Requires ES 7.4 or newer

2.4.2 2020/11/10
  - NOTICE - db.pl upgrade is required
  - NOTICE - this is the last version to support ES 6
  - release - node 12.19.0
  - viewer - support utf8 chars in content-disposition
  - viewer - add capture process restart to timeline graphs
  - viewer - add "bookmarks"
             apply a view's expression to the search input without issuing a query
  - viewer - fix anonymous users settings not being saved
  - viewer - share hunts between users
  - viewer - display business hours on sessions timeline graph
  - viewer - fix multi mpls header decoding
  - viewer - fix viewer crashing when pcap file not available
  - viewer - new getSessionBySearch setting
  - viewer - decode vxlan packets better
  - viewer - add help icon
  - viewer - added startTime and runningTime capture stats
  - capture - QUIC version 5x detection
  - capture - smtp decoding handles clients that break utf8 section incorrectly
  - capture - fix a json parsing fail would cause next json parse to fail even if good
  - capture - support 0x6558 Ether Bridging
  - wise - threatstream improvements when using the sqlite db
  - db - fix rm-node to delete over 10k items, and bad count display
  - tests - use our oui/rir files

2.4.1 2020/09/28
  - NOTICE - db.pl upgrade is required
  - NOTICE - the elasticsearch and usersElasticsearch variables must start with http:// or https://
  - release - node 12.18.4
  - viewer - fixed export pcap from actions menu not working
  - viewer - capture stats/graph now uses regex instead of wildcard
  - viewer - support -reindex indices